--- a/list.html
+++ b/list.html
@@ -1,21 +1,19 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html>
 <html>
 
-<head>
-	<title>My first web page</title>
-</head>
-
 <body>
-	<h1>My first web page</h1>
-	<h2>what is this ?</h2>
-	<p>hello,<br />this is my<em> first</em> web page</p>
-	<p>How <strong>exciting</strong></p>
-	<h2>why is this ?</h2>
-	<ol>
-		<li>To learn HTML</li>
-		<li>To show off</li>
-		<li>Because i have fallen in love with my computer and,<br />i want to teach her some HTML.</li>
-	</ol>
+
+	<h1>some random glossary thing</h1>
+	<dl>
+		<dt>HTML</dt>
+		<dd>Abbreviation for HyperText Markup Language - A language used to make web pages. </dd>
+		<dt>Dog</dt>
+		<dd>Any carnivorous animal belonging to the family Canidae.</dd>
+		<dd>The domesticated Sub-Species of the family Canidae, Canis lupus familiaris</dd>
+	<dt>Moo juice</dt>
+	<dt>Cat beer</dt>
+	<dt>Milk</dt>
+	<dd>A white liquid produced by cows and used for human consumption.</dd>
+	</dl>
 </body>
 </html>
